[gd_scene load_steps=6 format=3 uid="uid://0tq7xcajws3p"]

[ext_resource type="FontFile" uid="uid://de0bxdu4opbio" path="res://globals/PressStart2P-vaV7.ttf" id="1_a58nw"]
[ext_resource type="Script" path="res://ui/save_slot.gd" id="1_jfu0w"]
[ext_resource type="Texture2D" uid="uid://buyfaqowpfvkt" path="res://textures/ui/new save icon.png" id="2_5xea8"]
[ext_resource type="Texture2D" uid="uid://bhrk2b0n7p4op" path="res://textures/ui/load save icon.png" id="4_161vy"]
[ext_resource type="Texture2D" uid="uid://v0c43q51j4p8" path="res://textures/ui/delete save icon.png" id="5_ph20e"]

[node name="save slot" type="ColorRect"]
offset_right = 100.0
offset_bottom = 64.0
color = Color(0.403922, 0.403922, 0.403922, 1)
script = ExtResource("1_jfu0w")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_top = 2.0
offset_right = 100.0
offset_bottom = 26.0
theme_override_fonts/font = ExtResource("1_a58nw")
theme_override_font_sizes/font_size = 8
text = "new save"
horizontal_alignment = 1
autowrap_mode = 3

[node name="new save button" type="Button" parent="."]
layout_mode = 0
offset_left = 38.0
offset_top = 24.0
offset_right = 62.0
offset_bottom = 48.0
icon = ExtResource("2_5xea8")
icon_alignment = 1

[node name="load button" type="Button" parent="."]
layout_mode = 0
offset_left = 3.0
offset_top = 37.0
offset_right = 27.0
offset_bottom = 61.0
icon = ExtResource("4_161vy")
icon_alignment = 1

[node name="delete button" type="Button" parent="."]
layout_mode = 0
offset_left = 73.0
offset_top = 37.0
offset_right = 97.0
offset_bottom = 61.0
icon = ExtResource("5_ph20e")
icon_alignment = 1

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 100, 0, 100, 64, 0, 64, 0, 0)
width = 1.0
begin_cap_mode = 1

[connection signal="pressed" from="new save button" to="." method="_on_new_save_button_pressed"]
[connection signal="pressed" from="load button" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="delete button" to="." method="_on_delete_button_pressed"]
